fix: fixes of sonarqube issues
Refs: XRDDEV-2622